refactor: Improve GUI , Codebase, and Efficiency
This commit focuses on enhancing the plugin's visual appeal, codebase maintainability, and efficiency:

- **GUI Redesign:** Updated the GUI with a new color scheme, more fitting icons, and polished item names across all menus for a more professional and consistent user experience.
- **Code Cleanup (database package):** Removed unused `SerializationUtil.java` and the `switchToYAML`/`switchToMySQL` methods from `StorageFactory.java` to reduce clutter and improve code clarity.
- **Codebase Efficiency Improvements:**  The codebase has been reviewed and improved for better efficiency, contributing to potentially reduced resource usage and improved performance in general plugin operations.
- **Potential Memory Leak Mitigation:** Code refinements implemented in this commit may contribute to better resource management and help mitigate potential memory leaks by removing redundant code and streamlining data handling processes.
- **Configuration Enhancement:**  Reformatted `config.yml` to improve readability with section headers, comments for all options, and consistent formatting.
- **Maven POM Improvements:** Enhanced `pom.xml` by:
    - Centralizing dependency versions using properties for easier management.
    - Adding project metadata (`<name>`, `<description>`).
    - Updating `maven-compiler-plugin` to the latest version.